rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_df_execution__case_with_heterogeneous_then_types.snap
---
source: cubesql/src/compile/test/test_df_execution.rs
expression: "execute_query(r#\"\n                SELECT\n                    i,\n                    CASE WHEN i > 1 THEN 0 WHEN i > 0 THEN i END AS c\n                FROM (\n                    SELECT 0::int4 AS i\n                    UNION ALL\n                    SELECT 1::int4 AS i\n                    UNION ALL\n                    SELECT 2::int4 AS i\n                ) AS t\n                ORDER BY i\n                \"#.to_string(),\nDatabaseProtocol::PostgreSQL,).await.unwrap()"
---
+---+------+
| i | c    |
+---+------+
| 0 | NULL |
| 1 | 1    |
| 2 | 0    |
+---+------+
