rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_df_execution__case_with_heterogeneous_then_types_over_pg_catalog.snap
---
source: cubesql/src/compile/test/test_df_execution.rs
expression: "execute_query(r#\"\n                SELECT\n                    t.typname,\n                    CASE WHEN t.typtype = 'd' THEN 0\n                         WHEN t.typtype = 'b' THEN t.typbasetype\n                         ELSE 0 END AS base\n                FROM pg_catalog.pg_type t\n                WHERE t.typname IN ('int4', 'text')\n                ORDER BY t.typname\n                \"#.to_string(),\nDatabaseProtocol::PostgreSQL,).await.unwrap()"
---
+---------+------+
| typname | base |
+---------+------+
| int4    | 0    |
| text    | 0    |
+---------+------+
