rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_df_execution__date_part_interval.snap
---
source: cubesql/src/compile/test/test_df_execution.rs
expression: "execute_query(query.to_string(), DatabaseProtocol::PostgreSQL).await.unwrap()"
---
+---+
| d |
+---+
| 3 |
+---+
