rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_df_execution__filter_over_literal_column_of_table_scan.snap
---
source: cubesql/src/compile/test/test_df_execution.rs
expression: "results.join(\"\\n\")"
---
SELECT c, oid FROM (SELECT 'a' AS c, oid FROM pg_catalog.pg_namespace) AS t WHERE c = 'b' ORDER BY oid
+---+-----+
| c | oid |
+---+-----+
+---+-----+
SELECT c, oid FROM (SELECT 'a' AS c, oid FROM pg_catalog.pg_namespace) AS t WHERE c = 'b' AND oid > 0 ORDER BY oid
+---+-----+
| c | oid |
+---+-----+
+---+-----+
SELECT c, oid FROM (SELECT 'a' AS c, oid FROM pg_catalog.pg_namespace) AS t WHERE c = 'a' AND oid > 0 ORDER BY oid
+---+-------+
| c | oid   |
+---+-------+
| a | 11    |
| a | 2200  |
| a | 13000 |
+---+-------+
SELECT c, oid FROM (SELECT 'a' AS c, oid FROM pg_catalog.pg_namespace) AS t WHERE c = 'a' AND oid < 0 ORDER BY oid
+---+-----+
| c | oid |
+---+-----+
+---+-----+
SELECT c, oid FROM (SELECT 'a' AS c, oid FROM pg_catalog.pg_namespace) AS t WHERE c = 'b' OR oid < 0 ORDER BY oid
+---+-----+
| c | oid |
+---+-----+
+---+-----+
SELECT c, oid FROM (SELECT 'a' AS c, oid FROM pg_catalog.pg_namespace) AS t WHERE c = 'b' OR oid > 0 ORDER BY oid
+---+-------+
| c | oid   |
+---+-------+
| a | 11    |
| a | 2200  |
| a | 13000 |
+---+-------+
