rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_df_execution__round.snap
---
source: cubesql/src/compile/test/test_df_execution.rs
expression: "execute_query(query.to_string(), DatabaseProtocol::PostgreSQL).await.unwrap()"
---
+----------------------+----------------------------------+-----------------------------------+
| round(Float64(42.4)) | round(Float64(42.4382),Int64(2)) | round(Float64(1234.56),Int64(-1)) |
+----------------------+----------------------------------+-----------------------------------+
| 42                   | 42.44                            | 1230                              |
+----------------------+----------------------------------+-----------------------------------+
