rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_df_execution__timestamp_literal_plus_interval_plus_interval.snap
---
source: cubesql/src/compile/test/test_df_execution.rs
expression: "execute_query(query.to_string(), DatabaseProtocol::PostgreSQL).await.unwrap()"
---
+-------------------------+
| boundary                |
+-------------------------+
| 2026-10-03T00:00:00.000 |
+-------------------------+
