rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_df_execution__union_all_alias_mismatch.snap
---
source: cubesql/src/compile/test/test_df_execution.rs
expression: "execute_query(query.to_string(), DatabaseProtocol::PostgreSQL,).await.unwrap()"
---
+-----+-----+
| foo | bar |
+-----+-----+
| foo | bar |
+-----+-----+
